@@ -1462,7 +1462,7 @@ tkplot.rotate <- function(tkp.id, degree=NULL, rad=NULL) {
     }
     
     newfont <- tkfont.create(family=tkfamily, slant=slant, weight=weight,
-                             size=12*par("cex")*cex)
+                             size=12*cex)
     as.character(newfont)
   }
 }
